[metadata]
name = kLoop
version = 0.2.0
author = Fantix King
author_email = fantix.king@gmail.com
description = An asyncio event loop using Linux io_uring and kTLS.
long_description = file: README.en.md
long_description_content_type = text/markdown
url = https://github.com/fantix/kloop
project_urls =
    Bug Tracker = https://github.com/fantix/kloop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
